[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Text.tscn" type="PackedScene" id=3]
[ext_resource path="res://TiltNeon-Regular-VariableFont_XROT,YROT.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Timer.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
position = Vector2( 614, 468 )
script = ExtResource( 2 )

[node name="LineH" type="Line2D" parent="."]
position = Vector2( -264.133, 517 )
scale = Vector2( 0.525957, 1 )
points = PoolVector2Array( -661.352, 9, 1387, 9 )
default_color = Color( 0, 0, 0, 1 )
round_precision = 1

[node name="LineV" type="Line2D" parent="."]
position = Vector2( -65.0004, -104.917 )
rotation = 1.5708
scale = Vector2( 0.567488, 1 )
points = PoolVector2Array( -641.569, 9.00098, 2745.29, 8.99402 )
default_color = Color( 0, 0, 0, 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -73, 527 )

[node name="Q1" parent="." instance=ExtResource( 3 )]
margin_left = -604.0
margin_top = 1351.0
margin_right = 458.0
margin_bottom = 1439.0
bbcode_enabled = true
meta_underlined = false
text = ""
scroll_active = false

[node name="Q2" parent="." instance=ExtResource( 3 )]
margin_left = 437.0
margin_top = -125.0
margin_right = 1733.0
margin_bottom = 3.0
rect_rotation = 90.0
bbcode_enabled = true
text = ""

[node name="Timer" type="Timer" parent="."]
script = ExtResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="Timer"]
margin_left = 14.0
margin_top = 93.0
margin_right = 78.0
margin_bottom = 157.0
rect_scale = Vector2( 2, 2 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 1 )

[node name="Justification_text" type="RichTextLabel" parent="."]
margin_left = -538.0
margin_top = -446.0
margin_right = 379.0
margin_bottom = -287.0
custom_fonts/normal_font = SubResource( 1 )
text = "Enter your justification in the box below:"

[node name="Justification" type="TextEdit" parent="."]
modulate = Color( 1, 1, 1, 0.686275 )
self_modulate = Color( 1, 1, 1, 0.686275 )
light_mask = 31
margin_left = -453.0
margin_top = -378.0
margin_right = 447.0
margin_bottom = -174.0
custom_fonts/font = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
